# ffmpeg

./: README.md  main.py  pyproject.toml
.github/workflows/: pypi.yml
src/ffmpeg/: __init__.py  _chapters.py  abstractions.py  base.py  base_process.py  builder.py  chapter.py  config.py  constant.py  constants.py  exceptions.py  ffmpeg.py  filters.py  handlers.py  helpers.py  logger.py  logging.py  main.py  metadata.py
src/ffmpeg/audio/: filters.py
src/ffmpeg/exceptions/: errors.py
src/ffmpeg/video/: __init__.py  draw_text.py  filters.py  watermark.py
