[project]
name = "ffmpeg_vortexdude"
version = "0.1.5"
authors = [
  { name="Nitin Namdev", email="nitin.namdev@outlook.com" },
]
description = "python library for apply filters using ffmpeg cli"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Vortexdude/ffmpeg"
Issues = "https://github.com/Vortexdude/ffmpeg/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
